# downloadImages

./: .gitignore  .project  CDG1330.xmp  deleteUnderscore.py  downloadImages.py  mount_MacOS_test_disk  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
downloadImages/: downloadImages.py  python_get_resolve.py  resolve_integration.py
src/: apppaths.py
src/downloadImages/: __init__.py  __main__.py  cli.py  decode_metadata.py  download.py  downloadImages.py  nikon_mappings.py  resolve_integration.py  sourceimages.py  util.py  video_metadata.py
tests/: test_cli.py  test_download.py  test_sourceimages.py  test_video_metadata.py
